Refactored the show and index controllers for Users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.birthday %></td>
-        <td><%= user.profile_picture %></td>
+        <td><img src="<%= user.profile_picture %>"></td>
         <td><%= user.education %></td>
         <td><%= user.work %></td>
         <td><%= link_to 'Show', user %></td>
